<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="10dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/mainMotorcycleIMGV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/main_photo_description" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/brandTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/brand_placeholder" />

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/model_placeholder" />

        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/category_placeholder" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/favouriteIMGB"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favourite_button_description" />

</LinearLayout>